Prevent wordwrap for musician items.

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -82,3 +82,7 @@
 
 	.lineup-instrument-name
 		text-align: right;
+
+
+.musician-item
+	white-space: nowrap
